k3s-userapps/homepage/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: nextcloud
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/pod: homepage
  type: ClusterIP
