k3s-userapps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://kirillorlov.pro"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Public Homepage
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=homepage"
  name: homepage
  namespace: nextcloud
  labels:
    kirillorlov.pro/expose: external
spec:
  rules:
  - host: www.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: homepage
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: homepage
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.kirillorlov.pro
    - kirillorlov.pro
    secretName: homepage-tls
